<resources>
    <string name="app_name">Lab Test 02</string>
    <string name="btnHome">Home</string>
    <string name="btnSearch">Search</string>
    <string name="btnStats">Stats</string>
    <string name="btnProfile">Profile</string>
    <string name="greetingTextHome">Hello Saman</string>
    <string name="secondGreetingText">How do you feel  today?</string>
    <string name="btnMedicine">Medicine</string>
    <string name="btnCheckUp">Check Up</string>
    <string name="btnHealthTips">Health Tips</string>
    <string name="btnHealthStore">Health Store</string>
    <string name="yourAppoinment">Your Appoinment</string>
    <string name="drName">Dr.Kumara Dasanayaka</string>
    <string name="dateTime">Friday, 2 August 2024 - 10:99 A.M.</string>
    <string name="hosVenue">Hemas Hospital, Wattala</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="btnSignIn">Sign In</string>
    <string name="medi">Medi</string>
    <string name="moo">Moo</string>
    <string name="forgetPwd">Forget Password?</string>
    <string name="dontHvAcc">Do not have an account?</string>
    <string name="signUp">Sign Up</string>
    <string name="yourStatus">Your Status</string>
    <string name="clinicDetails">Clinic Details</string>
    <string name="clinicHistory">Clinic History</string>
    <string name="tdyMedicPlan">Today Medication Plan</string>
    <string name="tmrMedicPlan">Tomorrow Medication Plan</string>
    <string name="levothyroxine">LEVOTHYROXINE</string>
    <string name="euthyrox25mg">Euthyrox 25mg</string>
    <string name="afterBreakfast">After Breakfast</string>
    <string name="skip">Skip</string>
    <string name="done">Done</string>
    <string name="profileName">Saman Kahawala</string>
    <string name="profileAge">67 Years</string>
    <string name="btnEdit">Edit</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="contactNum">Contact Number</string>
    <string name="medicine">Medicine</string>
    <string name="entrUsrname">Enter username...</string>
    <string name="entrPsswrd">Enter password...</string>
    <string name="entrYrNmHre">Enter your name here...</string>
    <string name="entrYrEmlHre">Enter your email here...</string>
    <string name="entrYrUsnmHre">Enter your username here...</string>
    <string name="entrYrPsswdHre">Enter your password here...</string>
    <string name="reEntrPsswdHr">Re-enter your password here...</string>
    <string name="iAccptTrms">I accept terms and conditions</string>
</resources>