<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary_color"
    tools:context=".Profile">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/top_view"
            android:layout_width="394dp"
            android:layout_height="534dp"
            android:layout_marginTop="264dp"
            android:background="@drawable/search_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="379dp"
            android:layout_height="60dp"
            android:backgroundTint="#00897B"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.976">

            <Button
                android:id="@+id/btnHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/dominant_color"
                android:text="@string/btnHome"
                android:textColor="@color/secondary_color" />

            <Button
                android:id="@+id/btnSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/dominant_color"
                android:text="@string/btnSearch"
                android:textColor="@color/secondary_color" />

            <Button
                android:id="@+id/btnStats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/dominant_color"
                android:text="@string/btnStats"
                android:textColor="@color/secondary_color" />

            <Button
                android:id="@+id/btnProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#00897B"
                android:text="@string/btnProfile" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout4"
            android:layout_width="395dp"
            android:layout_height="707dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="124dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/profile_photo" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:text="@string/profileName"
                android:textColor="@color/dominant_color"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView16" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="168dp"
                android:layout_marginTop="4dp"
                android:text="@string/profileAge"
                android:textColor="@color/dominant_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView13" />

            <Button
                android:id="@+id/button3"
                android:layout_width="64dp"
                android:layout_height="31dp"
                android:layout_marginStart="163.5dp"
                android:backgroundTint="#00FFFFFF"
                android:text="@string/btnEdit"
                android:textColor="@color/dominant_color"
                android:textSize="8sp"
                app:cornerRadius="15px"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView14"
                app:strokeColor="@color/dominant_color"
                app:strokeWidth="1dp" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="46dp"
                android:layout_marginTop="284dp"
                android:text="@string/name"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextText3"
                android:layout_width="338dp"
                android:layout_height="45dp"
                android:layout_marginStart="25dp"
                android:ems="10"
                android:hint="Saman Kahawala"
                android:inputType="text"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView15" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="46dp"
                android:layout_marginTop="12dp"
                android:text="@string/email"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextText3" />

            <EditText
                android:id="@+id/editTextText4"
                android:layout_width="338dp"
                android:layout_height="45dp"
                android:layout_marginStart="25dp"
                android:ems="10"
                android:hint="samankahawala@hotmail.com"
                android:inputType="text"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView16" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="46dp"
                android:layout_marginTop="12dp"
                android:text="@string/age"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextText4" />

            <EditText
                android:id="@+id/editTextText5"
                android:layout_width="338dp"
                android:layout_height="45dp"
                android:layout_marginStart="25dp"
                android:ems="10"
                android:hint="Male"
                android:inputType="text"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView17" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="46dp"
                android:layout_marginTop="12dp"
                android:text="@string/gender"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextText5" />

            <EditText
                android:id="@+id/editTextText6"
                android:layout_width="338dp"
                android:layout_height="45dp"
                android:layout_marginStart="25dp"
                android:ems="10"
                android:hint="0775635984"
                android:inputType="text"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView18" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="46dp"
                android:layout_marginTop="12dp"
                android:text="@string/contactNum"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextText6" />

            <EditText
                android:id="@+id/editTextText7"
                android:layout_width="338dp"
                android:layout_height="45dp"
                android:layout_marginStart="25dp"
                android:ems="10"
                android:hint="0775689954"
                android:inputType="text"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView19" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>