<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary_color"
    tools:context=".SignUp">

    <View
        android:id="@+id/sign"
        android:layout_width="395dp"
        android:layout_height="565dp"
        android:background="@drawable/search_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/label_Number16"
        app:layout_constraintVertical_bias="1.0" />


    <TextView
        android:id="@+id/label_Number15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create Your Account"
        android:textColor="@color/dominant_color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/sign"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.943" />

    <EditText
        android:id="@+id/edt3"
        android:layout_width="338dp"
        android:layout_height="53dp"
        android:ems="20"
        android:hint="@string/entrYrUsnmHre"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.418"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_Number12"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="104dp"
        android:layout_height="98dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.062"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/edt1"
        android:layout_width="338dp"
        android:layout_height="53dp"
        android:ems="20"
        android:hint="@string/entrYrNmHre"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.418"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_Number16"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/label_Number17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Email"
        android:textColor="@color/secondary_color"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt1"
        app:layout_constraintVertical_bias="0.002" />

    <EditText
        android:id="@+id/edt2"
        android:layout_width="338dp"
        android:layout_height="53dp"
        android:ems="20"
        android:hint="@string/entrYrEmlHre"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.418"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_Number17"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/label_Number12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Username"
        android:textColor="@color/secondary_color"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt2"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/edt4"
        android:layout_width="338dp"
        android:layout_height="53dp"
        android:ems="20"
        android:hint="@string/entrYrPsswdHre"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.418"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_Number14"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/label_Number18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Re-enter password"
        android:textColor="@color/secondary_color"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt4"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/edt5"
        android:layout_width="338dp"
        android:layout_height="53dp"
        android:ems="20"
        android:hint="@string/reEntrPsswdHr"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.418"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_Number18"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/label_Number16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="524dp"
        android:text="Full Name"
        android:textColor="@color/secondary_color"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/label_Number14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/secondary_color"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt3"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/accent_color"
        android:text="@string/signUp"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_Number20"
        app:layout_constraintVertical_bias="0.111" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="126dp"
        android:layout_height="48dp"
        android:backgroundTint="#00FFFFFF"
        android:text="@string/btnSignIn"
        android:textAllCaps="false"
        android:textColor="@color/secondary_color"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_up"
        app:layout_constraintVertical_bias="0.0"
        app:strokeColor="#634343" />

    <CheckBox
        android:id="@+id/label_Number20"
        android:layout_width="197dp"
        android:layout_height="42dp"
        android:text="@string/iAccptTrms"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt5" />

</androidx.constraintlayout.widget.ConstraintLayout>